--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 /></a>
               </div>
               <div class="col-4 col-6-medium col-12-small">
-                <a href="#" class="image fit"
+                <a href="https://pet-care-store.vercel.app/" class="image fit"
                   ><img src="images/pic02.jpg" alt=""
                 /></a>
               </div>
