--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
               </div>
               <div class="col-4 col-6-medium col-12-small">
                 <a href="https://pet-care-store.vercel.app/" class="image fit"
-                  ><img src="images/pic02.jpg" alt=""
+                  ><img src="images/pic02.jpeg" alt=""
                 /></a>
               </div>
               <div class="col-4 col-6-medium col-12-small">
