--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
               <div class="col-4 col-6-medium col-12-small">
                 <a href="https://pet-care-store.vercel.app/" class="image fit"
                   ><img src="images/pic02.jpeg" alt=""
-                /></a>
+                style="height:50px" /></a>
               </div>
               <div class="col-4 col-6-medium col-12-small">
                 <a href="#" class="image fit"
